<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.mohamedelloumi.tripapp.presenters.FormPresenter" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.FormFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/vonTextView"
                style="@style/labelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/von"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.01999998" />

            <AutoCompleteTextView
                android:id="@+id/departureEditText"
                style="@style/inputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:completionThreshold="1"
                android:hint="@string/erforderlich"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@{presenter.departureAddress}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/vonTextView"
                app:layout_constraintTop_toBottomOf="@+id/vonTextView"
                app:layout_constraintVertical_bias="0.0"
                app:onClickAutoComplete="@{presenter.departureAddress}"
                app:suggestions="@{presenter.citiesList}"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/departureDateTextView"
                style="@style/labelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/abreisedatum"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/departureEditText"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#808080"
                app:layout_constraintBottom_toBottomOf="@+id/departureDateTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toEndOf="@+id/departureDateTextView"
                app:layout_constraintTop_toTopOf="@+id/departureDateTextView" />

            <TextView
                android:id="@+id/departureTimeTextView"
                style="@style/labelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/uhrzeit"
                app:layout_constraintBottom_toBottomOf="@+id/departureDateTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/departureDateTextView" />

            <EditText
                android:id="@+id/departureDateEditText"
                style="@style/inputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:focusable="false"
                android:importantForAutofill="no"
                android:inputType="date"
                android:longClickable="false"
                android:text="@{presenter.departureDate}"
                app:arrivalDate="@{presenter.arrivalDate}"
                app:departureDate="@{presenter.departureDate}"
                app:layout_constraintEnd_toEndOf="@+id/departureDateTextView"
                app:layout_constraintStart_toStartOf="@+id/departureDateTextView"
                app:layout_constraintTop_toBottomOf="@+id/departureDateTextView"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <View
                android:id="@+id/view2"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#808080"
                app:layout_constraintBottom_toBottomOf="@+id/departureDateEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toEndOf="@+id/departureDateEditText"
                app:layout_constraintTop_toTopOf="@+id/departureDateEditText" />

            <EditText
                android:id="@+id/departureTimeEditText"
                style="@style/inputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:focusable="false"
                android:inputType="time"
                android:longClickable="false"
                android:text="@{presenter.departureTime}"
                app:arrivalTime="@{presenter.arrivalTime}"
                app:departureTime="@{presenter.departureTime}"
                app:layout_constraintBottom_toBottomOf="@+id/departureDateEditText"
                app:layout_constraintEnd_toEndOf="@+id/departureTimeTextView"
                app:layout_constraintStart_toStartOf="@+id/departureTimeTextView"
                app:layout_constraintTop_toTopOf="@+id/departureDateEditText"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/nachTextView"
                style="@style/labelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/nach"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/departureDateEditText"
                app:layout_constraintVertical_bias="0.050000012" />

            <AutoCompleteTextView
                android:id="@+id/arrivalEditText"
                style="@style/inputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:completionThreshold="1"
                android:hint="@string/erforderlich"
                android:importantForAutofill="no"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/nachTextView"
                app:layout_constraintTop_toBottomOf="@+id/nachTextView"
                app:layout_constraintVertical_bias="0.0"
                app:onClickAutoComplete="@{presenter.arrivalAddress}"
                app:suggestions="@{presenter.citiesList}"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/arrivalDateTextView"
                style="@style/labelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/abreisedatum"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.108"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/arrivalEditText"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/view3"
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#808080"
                app:layout_constraintBottom_toBottomOf="@+id/arrivalDateTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toEndOf="@+id/arrivalDateTextView"
                app:layout_constraintTop_toTopOf="@+id/arrivalDateTextView" />

            <TextView
                android:id="@+id/arrivalTimeTextView"
                style="@style/labelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/uhrzeit"
                app:layout_constraintBottom_toBottomOf="@+id/arrivalDateTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toEndOf="@+id/view3"
                app:layout_constraintTop_toTopOf="@+id/arrivalDateTextView" />

            <EditText
                android:id="@+id/arrivalDateEditText"
                style="@style/inputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:editable="false"
                android:focusable="false"
                android:importantForAutofill="no"
                android:inputType="date"
                android:longClickable="false"
                android:text="@{presenter.arrivalDate}"
                app:layout_constraintEnd_toEndOf="@+id/arrivalDateTextView"
                app:layout_constraintStart_toStartOf="@+id/arrivalDateTextView"
                app:layout_constraintTop_toBottomOf="@+id/arrivalDateTextView"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/arrivalTimeEditText"
                style="@style/inputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:editable="false"
                android:focusable="false"
                android:importantForAutofill="no"
                android:inputType="date"
                android:longClickable="false"
                android:text="@{presenter.arrivalTime}"
                app:layout_constraintBottom_toBottomOf="@+id/arrivalDateEditText"
                app:layout_constraintEnd_toEndOf="@+id/arrivalTimeTextView"
                app:layout_constraintStart_toStartOf="@+id/arrivalTimeTextView"
                app:layout_constraintTop_toTopOf="@+id/arrivalDateEditText"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <View
                android:id="@+id/view4"
                android:layout_width="1dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#808080"
                app:layout_constraintBottom_toBottomOf="@+id/arrivalDateEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toEndOf="@+id/arrivalDateEditText"
                app:layout_constraintTop_toTopOf="@+id/arrivalDateEditText" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="@{() -> presenter.saveTripData()}"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>